related route setup

--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-
+        EM Tuition
     </div>
     <div class="menu">
         <i class="fa fa-bars" (click)="toggleContentStatus()"></i>
