--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -3,5 +3,17 @@
         <li routerLinkActive="active">
             <a routerLink="/home"> <i class="fa fa-home"></i>Home</a>
         </li>
+        <li routerLinkActive="active">
+            <a routerLink="/classes"> <i class="fa fa-exchange"></i>Classes</a>
+        </li>
+        <li routerLinkActive="active">
+            <a routerLink="/students"> <i class="fa fa-vcard"></i>Students</a>
+        </li>
+        <li routerLinkActive="active">
+            <a routerLink="/timetable"> <i class="fa fa-calendar"></i>Timetable</a>
+        </li>
+        <li routerLinkActive="active">
+            <a routerLink="/logs/fee"> <i class="fa fa-home"></i>Fee Logs</a>
+        </li>
     </ul>
 </aside>
