--- a/src/app/styles/common/_header.scss
+++ b/src/app/styles/common/_header.scss
@@ -12,6 +12,9 @@ header {
     color: white;
     .logo {
         background-color: $primary-color;
+        text-align: center;
+        padding-top: 15px;
+        font-size: 30px;
     }
     .menu {
         .fa-bars {
