--- a/src/app/styles/common/_header.scss
+++ b/src/app/styles/common/_header.scss
@@ -8,7 +8,7 @@ header {
     min-height: 60px;
     width: 100vw;
     grid-template-columns: 200px auto;
-    background-color: black;
+    background-color: #8da1a2;
     color: white;
     .logo {
         background-color: $primary-color;
