--- a/src/app/styles/pages/_login.scss
+++ b/src/app/styles/pages/_login.scss
@@ -40,6 +40,11 @@
                     &.bottom-right {
                         border-bottom-right-radius: 4px;
                     }
+                    .error {
+                        font-style: italic;
+                        font-weight: bold;
+                        color: $danger-color;
+                    }
                 }
             }
             input {
@@ -50,6 +55,9 @@
                 border-radius: 4px;
                 background-color: white;
                 border: none;
+            }
+            button {
+                margin-top: 10px;
             }
         }
     }
