--- a/src/app/styles/common/_header.scss
+++ b/src/app/styles/common/_header.scss
@@ -11,7 +11,7 @@ header {
     background-color: #8da1a2;
     color: white;
     .logo {
-        background-color: $primary-color;
+        background-color: $warning-color;
         text-align: center;
         padding-top: 15px;
         font-size: 30px;
